# Portfolio-AI-Agents

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  Makefile  PLAN.md  PORTS.md  README.md  SPEC.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
.claude/: architecture-patterns.md  configuration-reference.md  development-commands.md  file-map.md  fixes-applied.md  known-issues-and-gotchas.md  project-state.md  scratchpad.md  settings.local.json
.github/workflows/: ci.yml
dashboard/: .env.example  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
dashboard/__tests__/: graph-pane.a11y.test.tsx  graph-topology.test.ts  history.test.tsx  launcher.test.tsx  run-view.test.tsx  scrubber.test.tsx  setup.ts  smoke.test.tsx  transcript-pane.test.tsx  use-graph-state.test.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AgentCard.tsx  AgentIcon.tsx  AgentNode.tsx  AgentTranscriptSection.tsx  EdgeAnimated.tsx  GraphPane.tsx  HistoryTable.tsx  KanbanColumn.tsx  LauncherForm.tsx  RunView.tsx  Scrubber.tsx  ShareRunView.tsx  StateChip.tsx  TimelineStrip.tsx  TopNav.tsx  TranscriptPane.tsx  ViewToggle.tsx
dashboard/e2e/: graph-a11y.spec.ts  graph-run.spec.ts  home.spec.ts  scrubber.spec.ts
dashboard/lib/: api.ts  dagreLayout.ts  graph.ts  sse.ts  types.ts  useGraphState.ts
docs/demos/: dashboard.md  sales.md  support.md  verticals.md  voice.md
scripts/: demo.py  dev.sh  pull-models.sh  seed_rag.py
src/: chainlit_app.py  crew.py  dependencies.py  exceptions.py  main.py
src/agents/: __init__.py  factory.py
tasks/: plan.md  todo.md
tests/: conftest.py
(+139 files in other folders)
